--- a/AIML_Module_1_Lab_1_Extracting_features_from_data_.ipynb
+++ b/AIML_Module_1_Lab_1_Extracting_features_from_data_.ipynb
@@ -61,7 +61,7 @@
         "import plotly.express as px\n",
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
         "fr1 = wikipedia.page(topic1).content\n",
         "fr2 = wikipedia.page(topic2).content"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1359,6 +1359,45 @@
         "4. Will these features work for different classes other than 0 and 1?\n",
         "5. What will happen if we take more that two classes at a time?"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1.Which is the best combination of features?\n",
+        "\n",
+        "ans: The best combiation depends on the type of data , variable in sizes, domain knowledge.\n",
+        "A larger data set may enable us to use large number of features.\n",
+        "\n",
+        "2.How would you test or visualize four or more features?\n",
+        "\n",
+        "ans: There are two types dimension reduction methods:PCA, SNE.Dimension reduction-projects higher dimension of data into lower dimensions.Other ways to visualize 4 or more features is making use of the heatmaps and 3d 4d scatter plots.\n",
+        "\n",
+        "3.Can you come up with your own features?\n",
+        "\n",
+        "ans:Yes, features such as time-based and the statistical summaries (central tendencies) based on the domain knowledge , insights of the problem.\n",
+        "\n",
+        "4.Will these features work for different classes other than 0 and 1?\n",
+        "\n",
+        "ans:Yes , machine learning can handle multiple classes.\n",
+        "More than two classes are often referred as 'multi-class classification'.\n",
+        "\n",
+        "5.What will happen if we take more that two classes at a time?\n",
+        "\n",
+        "ans:it explands the complexity of the problem.The choice of features and model evaluation may differ depending on the number and nature of the features.\n",
+        "Strategies like softmax regression and one vs all is used."
+      ],
+      "metadata": {
+        "id": "NCf2bp0o4B6Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GcWVpcUW4SRx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
